# Copyright 2025 Gabriel Bjørnager Jensen.

[package]
name        = "bedrock"
version     = "0.5.0-6"
authors     = ["Achernar", "Gabriel Bjørnager Jensen"]
edition     = "2024"
description = "Artillery game."
readme      = "README.md"
repository  = "https://mandelbrot.dk/achernar/bedrock/"

[dependencies]
ctrlc    = "3.4"
pollster = "0.4"
rand     = "0.9"
toml     = "0.8"
wgpu     = "25.0"
winit    = "0.30"

conststr = { version = "0.3", features = ["oct"] }
oct      = { version = "0.23", features = ["proc-macro"] }
polywave = { version = "0.8", features = ["zerocopy"] }
serde    = { version = "1.0", features = ["derive"] }
zerocopy = { version = "0.8", features = ["derive", "float-nightly"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[lints.clippy]
arc_with_non_send_sync             = "forbid"
as_pointer_underscore              = "forbid"
as_ptr_cast_mut                    = "forbid"
as_underscore                      = "forbid"
assertions_on_constants            = "warn"
assertions_on_result_states        = "warn"
assign_op_pattern                  = "warn"
assigning_clones                   = "warn"
async_yields_async                 = "forbid"
bool_to_int_with_if                = "warn"
borrow_as_ptr                      = "forbid"
branches_sharing_code              = "warn"
cast_enum_truncation               = "forbid"
cast_lossless                      = "warn"
cast_possible_wrap                 = "warn"
cast_ptr_alignment                 = "forbid"
clear_with_drain                   = "warn"
clone_on_ref_ptr                   = "warn"
cloned_instead_of_copied           = "warn"
collection_is_never_read           = "warn"
dbg_macro                          = "warn"
debug_assert_with_mut_call         = "warn"
deref_by_slicing                   = "warn"
derive_partial_eq_without_eq       = "warn"
derived_hash_with_manual_eq        = "forbid"
empty_docs                         = "forbid"
empty_enum_variants_with_brackets  = "warn"
empty_line_after_doc_comments      = "forbid"
empty_line_after_outer_attr        = "forbid"
empty_loop                         = "allow"
empty_structs_with_brackets        = "warn"
enum_glob_use                      = "forbid"
enum_variant_names                 = "allow"
equatable_if_let                   = "warn"
excessive_precision                = "allow"
expl_impl_clone_on_copy            = "warn"
explicit_deref_methods             = "warn"
explicit_into_iter_loop            = "warn"
explicit_iter_loop                 = "warn"
fallible_impl_from                 = "warn"
flat_map_option                    = "warn"
float_cmp                          = "forbid" # Fortran, is that you?
float_cmp_const                    = "forbid"
format_push_string                 = "warn"
from_iter_instead_of_collect       = "warn"
future_not_send                    = "forbid"
if_not_else                        = "warn"
if_then_some_else_none             = "warn"
impl_trait_in_params               = "warn"
implicit_clone                     = "warn"
imprecise_flops                    = "forbid"
inconsistent_struct_constructor    = "forbid"
index_refutable_slice              = "warn"
inefficient_to_string              = "warn"
infinite_loop                      = "forbid"
into_iter_without_iter             = "warn"
invalid_atomic_ordering            = "forbid"
invalid_upcast_comparisons         = "warn"
iter_filter_is_ok                  = "warn"
iter_filter_is_some                = "warn"
iter_not_returning_iterator        = "warn"
iter_on_empty_collections          = "warn"
iter_on_single_items               = "warn"
iter_with_drain                    = "warn"
iter_without_into_iter             = "warn"
macro_use_imports                  = "warn"
manual_assert                      = "warn"
manual_c_str_literals              = "warn"
manual_instant_elapsed             = "warn"
manual_is_variant_and              = "warn"
manual_let_else                    = "warn"
manual_ok_or                       = "warn"
manual_string_new                  = "warn"
map_unwrap_or                      = "warn"
match_bool                         = "warn"
match_on_vec_items                 = "warn"
match_same_arms                    = "warn"
mismatching_type_param_order       = "warn"
missing_transmute_annotations      = "forbid"
mixed_read_write_in_expression     = "forbid"
module_inception                   = "allow"
mut_mut                            = "warn"
mutex_atomic                       = "forbid"
mutex_integer                      = "forbid"
needless_arbitrary_self_type       = "forbid"
needless_bitwise_bool              = "warn"
needless_collect                   = "warn"
needless_continue                  = "warn"
needless_raw_string_hashes         = "warn"
needless_raw_strings               = "warn"
new_without_default                = "allow"
no_effect_underscore_binding       = "forbid"
no_mangle_with_rust_abi            = "forbid"
non_ascii_literal                  = "deny"
nonstandard_macro_braces           = "forbid"
option_as_ref_cloned               = "warn"
option_if_let_else                 = "warn"
option_option                      = "warn"
or_fun_call                        = "forbid"
path_buf_push_overwrite            = "warn"
pattern_type_mismatch              = "forbid"
ptr_as_ptr                         = "forbid"
ptr_cast_constness                 = "forbid"
pub_underscore_fields              = "forbid"
range_plus_one                     = "warn"
rc_buffer                          = "forbid"
rc_mutex                           = "forbid"
read_zero_byte_vec                 = "warn"
redundant_clone                    = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else                     = "warn"
redundant_type_annotations         = "warn"
ref_as_ptr                         = "forbid"
ref_binding_to_reference           = "warn"
ref_option_ref                     = "warn"
rest_pat_in_fully_bound_structs    = "warn"
return_self_not_must_use           = "forbid"
same_functions_in_if_condition     = "warn"
same_name_method                   = "forbid"
self_named_module_files            = "forbid"
separated_literal_suffix           = "warn"
single_char_pattern                = "warn"
str_split_at_newline               = "warn"
string_lit_as_bytes                = "forbid"
string_lit_chars_any               = "warn"
string_to_string                   = "warn"
suboptimal_flops                   = "forbid"
test_outside_test_module           = "warn"
todo                               = "warn"
trait_duplication_in_bounds        = "forbid"
transmute_ptr_to_ptr               = "forbid"
type_repetition_in_bounds          = "forbid"
uninhabited_references             = "forbid"
uninlined_format_args              = "forbid"
unnecessary_box_returns            = "forbid"
unnecessary_join                   = "warn"
unnecessary_self_imports           = "forbid"
unneeded_field_pattern             = "warn"
unnested_or_patterns               = "warn"
unused_async                       = "warn"
unused_peekable                    = "warn"
unused_rounding                    = "warn"
use_self                           = "forbid"
used_underscore_binding            = "deny"
useless_let_if_seq                 = "warn"
verbose_bit_mask                   = "warn"
verbose_file_reads                 = "warn"
wildcard_dependencies              = "forbid"
zero_prefixed_literal              = "allow"

[profile.release]
opt-level     = 3
strip         = "none"
lto           = "fat"
panic         = "abort"
codegen-units = 1

[workspace]
exclude = ["wgpu"]
